feat: Elasticsearch 검색 기능 개선